# auth

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: main.yml  presubmit.yml  release.yml
cmd/engflow_auth/: BUILD  config.go  main.go  main_test.go  tokens.go
infra/: get_workspace_status  get_workspace_status.cmd  login.sh  logout.sh  release-build.sh  release-check.sh  release-create.sh  release.sh  test.sh  visibility.bzl
infra/internal/check_copyright_headers/: BUILD  main.go
internal/auth/: BUILD  authenticator.go  authenticator_test.go
internal/autherr/: BUILD  coded_error.go  coded_error_test.go
internal/browser/: BUILD  browser.go
internal/buildstamp/: BUILD  buildstamp.go  buildstamp_test.go
internal/httputil/: BUILD  header_transport.go
internal/oauthdevice/: BUILD  authenticator.go  logging.go  version_checking.go
internal/oauthtoken/: BUILD  cache_alert.go  cache_alert_test.go  debug.go  fake.go  fallback.go  fallback_test.go  file.go  file_test.go  keyring.go  keyring_test.go  load_storer.go  load_storer_test.go
platform/linux_x64/: BUILD  cc_toolchain_config.bzl
platform/windows_x64/: BUILD  windows_cc_toolchain_config.bzl
