"""Module for the engflow_auth credential-helper CLI."""

module(
    name = "engflow_auth",
    version = "1.0.0",
)

bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_go", version = "0.55.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_engflow_credential_helper_go",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "com_github_stretchr_testify",
    "com_github_urfave_cli_v2",
    "com_github_zalando_go_keyring",
    "org_golang_x_oauth2",
)
